--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,7 +8,7 @@ body{
     div > #conteiner{
      
       padding: 20px 60px;
-      
+      background-image: src="http://www.fondosgratis.mx/imagenItem/1513/1366/mario.jpg";
       
       -moz-border-radius: 10px;
       webkit-border-radius: 10px;
