--- a/app/views/simon.html
+++ b/app/views/simon.html
@@ -15,5 +15,9 @@
 	
 </div>	
 <h1 style="color:red;"> {{titulo}}  </h1>
+<h1 styles="color:red;">{{acumuladorC}}</h1>
+<h1 styles="color:blue;">{{acumuladorB}}</h1>
+<h1 styles="color:green;">{{acumuladorA}}</h1>
+<h1 styles="color:yellow;">{{acumuladorD}}</h1>
 <p>{{colores}}</p>
 <button type="button" class="btn btn-default" ng-click="borra()">button</button>
